--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@bulatdashiev/svelte-slider": "^1.0.3",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/svelte-scroller": "^2.0.7",
     "axios": "^1.6.7",
